Fixed Overflow Mistake

--- a/Greenhill_Sarah_project2/css/main.css
+++ b/Greenhill_Sarah_project2/css/main.css
@@ -86,7 +86,7 @@ body {
 	text-indent: 10px;
 	border: #ffd938 solid 2px;
 	padding: 5px;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 #pageMainText{
